@@ -1,3 +1,10 @@
+2003-09-05  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* poem-xm.el (char-length): Don't use `defun-maybe' to define it
+	since this module may be installed as the XEmacs pachage which
+	should be usable by all the XEmacs 21.x series.
+
+
 2003-07-05  Yuuichi Teranishi  <teranisi@gohome.org>
 
 	* APEL: Version 10.6 released.
